--- a/index.html
+++ b/index.html
@@ -4,41 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>КАЛЬКУЛЯТОР ЕБАТЬ</title>
-    <link href="/st.css" rel="stylesheet">
+    <title>Калькулятор</title>
+    <link href="st.css" rel="stylesheet">
+    <link rel="icon" href="/calc/favicon-32x32.png" type="image/png">
 </head>
 <body>
-    <div class="boxcenter">
-        <div class="box">
-            <div class="item input">
-                <form name="form">
-                    <input type="text" name="textview" readonly>
-                </form>
-            </div>
-            <div class="item clean" onclick="clean()">C</div>
-            <div class="item back" onclick="back()">&larr;</div>
-            <div class="item" onclick="insert('+')">+</div>
-            <div class="item" onclick="insert('-')">-</div>
-            <div class="item" onclick="insert('*')">*</div>
-            <div class="item" onclick="insert('/')">/</div>
+    <div class="center">
+        <div class="container">
+            <div class="input item" id="zero">0</div>
+            <div class="item" id="gray" onclick="degree()">x&#8319;</div>
+            <div class="item" id="gray" onclick="fact()">x!</div>
+            <div class="item" id="gray"onclick="percent()">%</div>
+            <div class="item" onclick="insert('(')">(</div>
+            <div class="item" onclick="insert(')')">)</div>
+            <div class="item" onclick="back()">&lArr;</div>
+            <div class="item" id="orange" onclick="insert('/')">&divide;</div>
+
+            <div class="item" id="gray" onclick="f('asin')">asin</div>
+            <div class="item" id="gray" onclick="f('sin')">sin</div>
+            <div class="item" id="gray" onclick="x1()">1/x</div>
             <div class="item" onclick="insert('7')">7</div>
             <div class="item" onclick="insert('8')">8</div>
             <div class="item" onclick="insert('9')">9</div>
-            <div class="item" onclick="insert('(')">(</div>
+            <div class="item" id="orange" onclick="insert('*')">&times;</div>
+
+            <div class="item" id="gray" onclick="f('acos')">acos</div>
+            <div class="item" id="gray" onclick="f('cos')">cos</div>
+            <div class="item" id="gray" onclick="sqrt()">&radic;</div>
             <div class="item" onclick="insert('4')">4</div>
             <div class="item" onclick="insert('5')">5</div>
             <div class="item" onclick="insert('6')">6</div>
-            <div class="item" onclick="insert(')')">)</div>
+            <div class="item" id="orange" onclick="insert('-')">&minus;</div>
+
+            <div class="item" id="gray" onclick="f('atg')">atan</div>
+            <div class="item" id="gray" onclick="f('tg')">tg</div>
+            <div class="item" id="gray" onclick="ln()">ln</div>
             <div class="item" onclick="insert('1')">1</div>
             <div class="item" onclick="insert('2')">2</div>
             <div class="item" onclick="insert('3')">3</div>
-            <div class="item equal" onclick="equal()">=</div>
+            <div class="item" id="orange" onclick="insert('+')">+</div>
+
+            <div class="item" id="gray" onclick="lg()">lg</div>
+            <div class="item" id="gray" onclick="pi()">&prod;</div>
+            <div class="item" id="gray" onclick="e()">e</div>
+            <div class="item" onclick="dot()">.</div>
             <div class="item zero" onclick="insert('0')">0</div>
-            <div class="item" onclick="insert('.')">.</div>
+            <div class="item clean" onclick="clean()">C</div>
+            <div class="item equal" id="orange" onclick="equal()">=</div>
         </div>
     </div>
-
-
     <script src="calc.js"></script>
 </body>
 </html>
