--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Калькулятор</title>
     <link href="st.css" rel="stylesheet">
-    <link rel="icon" href="/calc/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="favicon-32x32.png" type="image/png">
 </head>
 <body>
     <div class="center">
